grid block align fix

--- a/style.css
+++ b/style.css
@@ -59,17 +59,22 @@ body {
     padding: 0 1rem;
 }
 
-
-.align-wrapper-one {
+/* BLOCK ALIGN MET GRID */
+.block {
     display: grid;
     grid-template-columns: 1fr 8fr 1fr;
+}
+
+.block.block-nav {
     background: var(--yellow);
     background-image: linear-gradient(to bottom,#ffca2a,#ffc426);
 }
 
-.align-wrapper-two {
-    display: grid;
-    grid-template-columns: 1fr 8fr 1fr;
+.block.block-tickets {
+    background: var(--black);
+}
+
+.block.block-hero {
     background: var(--black);
 }
 
@@ -190,18 +195,27 @@ border-radius: 8px 8px 8px 8px;
 }
 
 .hero {
-    margin-top: -1.3rem;
+    grid-column: 2;
+    
     background: url(https://pathe.blueconic.net/rest/dialogues/files/1ca55c1f-d2cf-4d6c-8e9f-8cdd36d86ce7/carousel_bumblebee.jpg);
-    /* background-position: center; */
-    /* background-size: cover; */
+    background-position: top;
+    background-size: 100%;
     background-repeat: no-repeat;
+
     /* background: linear-gradient(180deg, transparent, #000); */
 }
 
 
 
-/* list before streep
-    color: #6d6e71;
-    content: "|";
-    padding: 0 10px;
-*/
+.hero-carousel {
+    display: grid;
+    grid-gap: 0rem;
+   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+   
+}
+
+.movie {
+    display: grid;
+    justify-items: center;
+}
+
